# forex-trading-analyzer

./: .gitignore  README.md  ai_analyzer.py  app.py  database.py  install.bat  install.sh  pyproject.toml  requirements.txt  screen_capture.py  trading_engine.py  utils.py  video_manager.py
